# qmt-parser

./: .env.sample  .gitignore  .gitmodules  MSAP.py  MSAP1.py  MyAnalyse_K.py  MyCashFlowTest.py  MyFunds.code-workspace  MyFunds.py  MyFunds.pyproj  MyFunds.rar  MyFunds.sln  MyMenu.py  MyPivot.py  MyPyqt5.py  MySTP.py  MyTSOS.py  MyTestMoudle.py  My历史分笔.py  My实时分笔.py  analyse.py  app.py  apt_test.py  caixin_article_debug.html  caixin_article_login_browser_debug.html  callbacks.py  chess_game.txt  data_windows.py  demo_ts_测试技术指标模块.py  draw.py  draw2.py  fund.py  fund（停用）.py  install_requirements.py  layouts.py  log.csv  merge.1.py  merge.py  module1.py  module2.py  (+18 more)
737NG/: cv_test.py
apps/webui/securities-dashboard/backend/api/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/webui/securities-dashboard/backend/api/app/: __init__.py
apps/webui/securities-dashboard/backend/api/app/api/v1/: __init__.py
apps/webui/securities-dashboard/backend/api/app/api/v1/market/: __init__.py
apps/webui/securities-dashboard/backend/api/app/api/v1/portfolio/: __init__.py
apps/webui/securities-dashboard/backend/api/app/api/v1/qmt/: __init__.py
apps/webui/securities-dashboard/backend/api/app/core/: __init__.py  config.py  deps.py  security.py
apps/webui/securities-dashboard/backend/api/app/models/: __init__.py  market.py
apps/webui/securities-dashboard/backend/api/app/providers/: __init__.py  akshare_provider.py  base.py  tushare_provider.py
apps/webui/securities-dashboard/backend/api/app/services/: __init__.py  market_service.py  qmt_service.py
(+15362 files in other folders)
